<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Google Authenticator</string>
    <string name="app_name_short">Authenticator</string>
    <string name="enter_key_title">Manual account entry</string>
    <string name="enter_key_menu_item">Manually add account</string>
    <string name="enter_account_label">Enter account name</string>
    <string name="enter_account_hint">user@example.com</string>
    <string name="enter_key_label">Enter key</string>
    <string name="enter_key_hint">Enter your key</string>
    <string name="enter_key_hint_edit">Keep existing value</string>
    <string name="enter_key_too_short">Key value is too short</string>
    <string name="enter_key_check">Integrity check value: </string>
    <string name="enter_key_problem">Unexpected problem</string>
    <string name="account_deleted">Account deleted</string>
    <string name="status_hint">Press Menu for more options.</string>
    <string name="error_title">Error</string>
    <string name="error_uri">Key not recognized.</string>
    <string name="secret_saved">Secret saved</string>
    <string name="enter_pin">Enter this verification code if prompted during
    account sign-in:</string>
    <string name="not_initialized">    
    <![CDATA[Google Authenticator will generate verification codes that can be used to provide additional security when signing in.<br/>
    <br/>
    To use Google Authenticator, first enable <a href="https://www.google.com/support/mobile/bin/answer.py?hl=en&amp;answer=180368">two-step verification</a> for your Google Account. Then scan your account information via barcode or enter it manually:]]>
    </string>
    <string name="check_code_title">Integrity check value</string>
    <string name="check_code_menu_item">Check key value</string>
    <string name="scan_barcode_menu_item">Scan account barcode</string>
    <string name="install_dialog_title">Install barcode scanner?</string>
    <string name="install_dialog_message">To scan barcodes containing keys, you must install the ZXing barcode scanner.</string>
    <string name="install_button">Install</string>
    <string name="refresh_menu_item">Refresh</string>
    <string name="more_menu_item">More</string>
    <string name="about_menu_item">About</string>
    <string name="about_text">Google Authenticator&lt;br>
    Version %1$s</string>
    <string name="opensource_menu_item">Open Source Project</string>
    <string name="terms_menu_item">Terms of Service</string>
    <string name="privacy_menu_item">Privacy Policy</string>
    <string name="check_code">
    To check that you have the correct key value for %1$s
    verify that the value here matches the integrity check value provided
    by the server:&lt;br/>
    </string>
    <string name="general_security_exception">General security exception</string>
    <string name="decoding_exception">Decoding exception</string>
    <string name="submit">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Delete this key?</string>
    <string name="rename">Rename</string>
    <string name="rename_message">Rename %1$s</string>
    <string name="error_exists">Sorry, that name is already in use.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="counter_pin">Get code</string>
    <string name="empty_pin">_ _ _ _ _ _</string>
    <string name="ok">OK</string>
    <string name="type_prompt">Type of key</string>

    <!-- NOTE: order matters here and must be the same as AccountDb.TYPE_*
         TODO(adhintz): make order not matter by using something like enums -->
    <string-array name="type">
      <item>Time based</item>
      <item>Counter based</item>
    </string-array>
<string name="uninitialized_widget_user">please click the icon to configure</string>
<string name="hotp_widget_text">open app for pin</string>
</resources>
