<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:layout_marginLeft="5dip">
  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingTop="4dip"
    android:layout_marginLeft="20dip" android:layout_marginRight="10dip"
    android:orientation="vertical">
    <TextView android:id="@+id/enter_account_label"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:layout_marginTop="5dip" android:text="@string/enter_account_label" />
    <EditText android:id="@+id/account_name" android:layout_marginTop="5dip"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:hint="@string/enter_account_hint" android:singleLine="true" />
    <TextView android:id="@+id/enter_key_label" android:layout_width="fill_parent"
      android:layout_height="wrap_content" android:layout_marginTop="5dip"
      android:text="@string/enter_key_label" />
    <EditText android:id="@+id/key_value" android:layout_marginTop="5dip"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:inputType="textCapCharacters" android:hint="@string/enter_key_hint"
      android:singleLine="true" />
    <TextView android:id="@+id/status_text" android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
    <TextView android:id="@+id/type_label" android:text="@string/type_prompt"
      android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:layout_marginTop="5dip"
      android:id="@+id/type_choice" android:prompt="@string/type_prompt" />

</LinearLayout>
  <LinearLayout android:layout_width="fill_parent"
    android:paddingTop="4dip"
    android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
    android:gravity="bottom|center_horizontal" android:layout_height="fill_parent">
    <Button android:id="@+id/submit_button" android:text="@string/submit"
      android:layout_height="wrap_content" android:layout_width="wrap_content"
      android:layout_weight="1" />
    <Button android:id="@+id/cancel_button" android:text="@string/cancel"
      android:layout_height="wrap_content" android:layout_width="wrap_content"
      android:layout_weight="1" />
  </LinearLayout>
  <View android:layout_width="wrap_content" android:layout_height="0dip"
    android:layout_weight="1" android:visibility="invisible" />
</LinearLayout>
